package betsy.data

class TestStep {

    /**
     * just for documentation purposes
     */
    String description


    @Override
    public String toString() {
        return "TestStep{$description}"
    }
}




